[tool.poetry]
name = "nntsa"
version = "0.1.0"
description = "Neural Networks for Time Series Analysis"
authors = ["Han WANG <han.wang@cea.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"
pandas = "^2.0.3"
numpy = "^1.25.0"
scikit-learn = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
